@@ -1,6 +1,11 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-10-27  Volker Stroebel <volker@planetpenguin.de>
+	* src/ppogl/sg/vnc.* src/course_load.* src/quadtree.*
+	added class VNCArray
+	changed code to use the new class
+
 2005-10-25  Volker Stroebel <volker@planetpenguin.de>
 	* src/credits.cpp
 	cleanups
